remove secret keys

--- a/application.env
+++ b/application.env
@@ -2,7 +2,7 @@ mongo.datasource.url=localhost
 mongo.datasource.port=27017
 mongo.datasource.username=admin
 mongo.datasource.password=Qwertyu8
-google.ClientId=625204947655-pist7ueh5u014sesakha6n8gf281jn2r.apps.googleusercontent.com
-google.ClientSercet=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
+google.ClientId=
+google.ClientSercet=
 server.port=8080
 server.address=localhost
